--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && nodemon"
+    "start": "nodemon src/server.ts",
+    "docker:up": "cd docker && docker-compose -f mongodb.yml -p \"myapp\" up -d"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
-    "mongoose-aggregate-paginate-v2": "^1.0.6"
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
