--- a/server/docker/mongodb.yml
+++ b/server/docker/mongodb.yml
@@ -2,10 +2,10 @@ version: '3.8'
 services:
     mongodb:
         image: mongo:latest
-        container_name: mongodb
+        container_name: mongodb2
         restart: always
         ports:
-            - 27017:27017
+            - 27019:27019
         volumes:
             - mongodb:/data/db
 volumes:
