--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/server.ts",
-    "docker:up": "cd docker && docker-compose -f mongodb.yml -p \"myapp\" up -d"
+    "docker:up": "cd docker && sudo docker-compose -f mongodb.yml -p \"test\" up -d"
   },
   "author": "",
   "license": "ISC",
