--- a/server/docker/mongodb.yml
+++ b/server/docker/mongodb.yml
@@ -2,10 +2,10 @@ version: '3.8'
 services:
     mongodb:
         image: mongo:latest
-        container_name: mongodb2
+        container_name: mongodb
         restart: always
         ports:
-            - 27019:27019
+            - 27017:27017
         volumes:
             - mongodb:/data/db
 volumes:
