--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose-paginate": "^5.0.12",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "mongoose-paginate": "^5.0.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
